test library update

--- a/TestDataLibrary/TestDataLibrary.csproj
+++ b/TestDataLibrary/TestDataLibrary.csproj
@@ -47,6 +47,7 @@
     <Compile Include="GlobalConfig.cs" />
     <Compile Include="DataAccess\IDataConnection.cs" />
     <Compile Include="DataAccess\SqlConnector.cs" />
+    <Compile Include="Models\FullEmployee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
